# s3explorer

./: .gitignore  Makefile  README.md  ideas.md  pyproject.toml
docs/: ideas.md
src/s3explorer/: __init__.py  __main__.py  app.py  app.tcss  main.py  main.tcss  s3.py  version.py
src/s3explorer/entities/: FileDescription.py  FileType.py  __init__.py
src/s3explorer/styles/: app.tcss
src/s3explorer/widgets/: Bookmark.py  ExplorerTable.py  URIInput.py  __init__.py
